# AEMIOS_monitorizacion_celda

./: .gitignore  Makefile  docker-compose.yaml
api/: .env  Dockerfile  api.http  main.py  pyproject.toml
api/bbdd/: influxdb.py
api/constantes/: config.py  email.py
api/entidades/modelos/: mensajes.py
api/entidades/schemas/: command.py  mqtt_message.py  order.py  point.py
api/middlewares/: cors.py
api/mqtt/: client.py
api/routes/: influx.py  mqtt.py
api/services/: email.py  influx.py  mensajes.py  mqtt.py
api/test/: conftest.py
api/test/mensajes/: test_mensajes.py
babylon/: Celda AEM.rar  Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.js
babylon/public/: guiTexture.json
babylon/public/models/: explosionada.glb
babylon/src/: App.jsx  babylon.jsx  babylonNEW.jsx  index.css  labelManager.js
babylon/src/assets/: panel.css
babylon/src/components/: bomba-anodo.js  bomba-catodo.js  controladora.js  panel-control copy.jsx  panel-control.jsx  potencia-global.js  termopar.js
babylon/src/context/: mqtt-context.jsx
babylon/src/gui/: card-old.js  card.js  controls.js  image.js  indicator.js  label.js  switch.js
babylon/src/hooks/: useBabylonScene.js  useDebounce.js
babylon/src/utils/: adaptiveUI.js
docker/: babylon.Dockerfile  frontend.Dockerfile
frontend/: Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App copy.jsx  App.jsx  main.jsx
mosquitto/: Dockerfile
mosquitto/config/: mosquitto.conf
telegraf/: Dockerfile  telegraf.conf
(+126 files in other folders)
